--- a/web-server/views/help.hbs
+++ b/web-server/views/help.hbs
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML 5 Boilerplate</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script src="/js/app.js"></script>
   </head>
   <body>
-	  <h1>From a static file</h1>
+	  <h1>{{ title }}</h1>
+    <p>Created by {{ name }}</p>
+    <p>{{ message }}</p>
   </body>
 </html>
-
