--- a/web-server/views/index.hbs
+++ b/web-server/views/index.hbs
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML 5 Boilerplate</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/app.js"></script>
   </head>
   <body>
-	  <h1>About Page</h1>
-    <img src="/img/SDW Built Profile copy.jpeg" alt="SDW Picture">
+	  <h1>{{ title }}</h1>
+    <p>Created by {{ name }}</p>
   </body>
 </html>
