--- a/web-server/templates/views/help.hbs
+++ b/web-server/templates/views/help.hbs
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>Help</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/img/weather.png">
   </head>
   <body>
-    {{>header}}
-    <p>{{ message }}</p>
+    <div class="main-content">
+      {{>header}}
+      <p>{{ message }}</p>
+    </div>
+
     {{>footer}}
   </body>
 </html>
