--- a/web-server/templates/views/about.hbs
+++ b/web-server/templates/views/about.hbs
@@ -4,12 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML 5 Boilerplate</title>
+    <title>About</title>
+    <link rel="icon" href="/img/weather.png">
     <link rel="stylesheet" href="/css/styles.css">
   </head>
   <body>
-    {{>header}}
-    <img src="/img/SDW Built Profile copy.jpeg" alt="SDW Picture">
+    <div class="main-content">
+      {{>header}}
+      <img src="/img/SDW Built Profile copy.jpeg" alt="SDW Picture" class="portrait">
+    </div>
+
     {{>footer}}
   </body>
 </html>
