--- a/web-server/templates/views/index.hbs
+++ b/web-server/templates/views/index.hbs
@@ -7,12 +7,24 @@
     <title>Weather</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="/img/weather.png">
-    <script src="/js/app.js"></script>
   </head>
   <body>
     <div class="main-content">
       {{>header}}
+
+      <p>Use this site to get your weather!</p>
+
+      <form action="">
+        <input type="text" placeholder="Locations">
+        <button>Search</button>
+      </form>
+
+      <div>
+        <p id="message-one"></p>
+        <p id="message-two"></p>
+      </div>
     </div>
     {{>footer}}
+    <script src="/js/app.js"></script>
   </body>
 </html>
